fixed spacing issues, git plz work

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration-color: #1b2236;
-    /* border: 3px solid green; */
+    /* border: 1px solid green; */
 }
 
 a:hover {
@@ -92,22 +92,23 @@ h1, h2, h3 {
 
  main{
     flex-grow: 1;
+    display:inline-block;
+    padding: 16px;
+    width: 90%;
+    max-width: 960px;
+    margin: 20px auto;
 }
 
 .body {
-    padding: 8px;
-    gap: 10px;
-    width: 90%;
-    margin: 20px auto;
     align-items: center;
+    margin: 20px auto;
     display: flex;
-    max-width: 960px;
 }
 .selfie {
     width: 720px;
     height: auto;
     aspect-ratio: 1/1;
-    position: relative;
+    /* position: relative; */
     display: flex;
     top: -25px;
     border-radius: 50%;
